src/test/resources/org/shirolang/interpreter/errors/path_assignment_path_not_found.sro
node Box begin
    input length Double
    leeeength(10.0)
    input width Double
    input height Double
    update Multiply(a: length, b: width)
end

b Box
